Import of PRATZLAFF/Astro-WCS-LibWCS-0.91 from CPAN.
gitpan-cpan-distribution: Astro-WCS-LibWCS
gitpan-cpan-version:      0.91
gitpan-cpan-path:         PRATZLAFF/Astro-WCS-LibWCS-0.91.tar.gz
gitpan-cpan-author:       PRATZLAFF
gitpan-cpan-maturity:     released

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2007-04-06  Pete Ratzlaff  <pratzlaff@cfa.harvard.edu>
+
+	* LibWCS.pm: $VERSION = '0.91'
+
+	* LibWCS.xs: lots of changes to make everything compatible with
+	wcstools 3.6.8
+
+2003-09-18  Pete Ratzlaff  <pratzlaff@cfa.harvard.edu>
+
+	* LibWCS.xs: lots of bugs uncovered and hopefully fixed due to
+	prototype checking.
+
+	* wcsdecl.h: added to fill in lack of declaraction in libwcs headers
+
 2003-09-04  Pete Ratzlaff  <pratzlaff@cfa.harvard.edu>
 
 	* $VERSION = '0.90', uploaded to CPAN.
