Import of PRATZLAFF/Astro-WCS-LibWCS-0.93 from CPAN.
gitpan-cpan-distribution: Astro-WCS-LibWCS
gitpan-cpan-version:      0.93
gitpan-cpan-path:         PRATZLAFF/Astro-WCS-LibWCS-0.93.tar.gz
gitpan-cpan-author:       PRATZLAFF
gitpan-cpan-maturity:     released

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,20 @@
+2010-11-30  Diab Jerius  <dj@macabre.cfa.harvard.edu>
+
+	* LibWCS.PM: $VERSION = '0.93'
+
+	* LibWCS.xs, LibWCS.pm: upgraded to libwcs v 3.8.1, added new
+	functions ang2hr, ang2deg, deg2ang, hr2ang, jd2mst2, mjd2mst
+
+2010-11-30  Diab Jerius  <dj@macabre.cfa.harvard.edu>
+
+	* LibWCS.PM: $VERSION = '0.92'
+
+	* typemap, util.c: modernize code to check for undefined values;
+	old code fails on newer perls in certain cases
+
+	* Makefile.PL: add new configure options to allow different roots
+	for libs and includes for libwcs
+
 2007-04-06  Pete Ratzlaff  <pratzlaff@cfa.harvard.edu>
 
 	* LibWCS.pm: $VERSION = '0.91'
